<resources>
    <string name="app_name">EasyPay</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poi_search_hint">输入地址</string>
    <string name="no_more_data">没有数据了</string>
    <string name="login_phone">输入手机号</string>
    <string name="name">输入姓名</string>
    <string name="find_location">获取位置</string>
    <string name="near_merchant">附近的商家</string>
    <string name="no_net_content">没有内容</string>
    <string name="empty_title_no_network">没有网络</string>
    <string name="loading">加载中…</string>
    <string name="personal_center">个人中心</string>
    <string name="my_new">我的消息</string>
    <string name="my_share">我的分享</string>
    <string name="options">意见反馈</string>
    <string name="user_help">用户帮助</string>
    <string name="version_update">版本升级</string>
    <string name="about_us">关于我们</string>
    <string name="share_us">分享我们</string>
    <string name="click_login">用户登录</string>
    <string name="new_discount">发现</string>
    <string name="current_version_num">当前版本:1.0.0</string>
    <string name="about_us_text">关于我们的内容</string>
    <string name="company">copy@2016</string>
    <string name="option_back">写下你的用户反馈</string>
    <string name="cotact_text">联系方式</string>
    <string name="contact_example">你的手机号或者QQ</string>
    <string name="send">发送</string>
    <string name="question_1">问题1</string>
    <string name="question_2">问题2</string>
    <string name="answer_1">答案1</string>
    <string name="answer_2">答案2</string>
    <string name="question_3">问题3</string>
    <string name="answer_3">答案3</string>
    <string name="invite_msg">分享给好友</string>
    <string name="invite_now">立即邀请</string>
    <string name="no_msg">暂无消息</string>
    <string name="login_pass">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_account">用户注册</string>
    <string name="register">注册</string>
    <string name="net_fail">网络连接失败</string>
    <string name="not_phone">不是有效的手机号</string>
    <string name="phone">手机号</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_success">登出成功</string>
    <string name="info">个人信息</string>
    <string name="change_head">更换头像</string>
    <string name="change_from_camera">拍照获取</string>
    <string name="change_from_sd">本地相册</string>
    <string name="cancel">取消</string>
    <string name="news_title">消息中心</string>
    <string name="good_list">商品列表</string>
    <string name="good_detail">商品详情</string>
    <string name="price">价格：</string>
    <string name="thanks_for_send">感谢您的反馈</string>
    <string name="change_name">修改姓名</string>
    <string name="sure">确定</string>
    <string name="update_fail">更新失败</string>
    <string name="shop_car_empty">购物车是空的</string>
    <string name="firm_list">选好了</string>
    <string name="order">订单</string>
    <string name="title_order_empty_tip">您还没点单</string>
    <string name="seat_name">桌(房间)号</string>
    <string name="input_seat_num">请输入桌号</string>
    <string name="dialog_input_seat_num">请输入桌(房间)号</string>
    <string name="input_person_num">请输入人数</string>
    <string name="input_remark">口味、偏好等其他要求</string>
    <string name="order_content">订单内容</string>
    <string name="title_submit_order">提交订单</string>
    <string name="title_confirm_order">确认订单</string>
    <string name="title_order_content_tip">订单内容</string>
    <string name="title_submit_order_tip">本次价格不代表最终结算价（不包括使用会员卡、优惠券等享受的折扣）。</string>
    <string name="title_desk_empty_tip">请输入座号或者房间号</string>
    <string name="right_complete">完成</string>
    <string name="person_num_name">人数</string>
    <string name="remark_name">备注</string>
    <string name="no_login">您还没登录</string>
</resources>
