<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.erban.beauty.pages.personal.activity.UseHelpActivity">

    <include
        android:id="@+id/topRL"
        layout="@layout/top_title"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_bg"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:id="@+id/icon_1"
            />
        <TextView
            android:layout_toRightOf="@id/icon_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:textColor="@color/company_grey_text"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:textColor="@color/company_grey_text"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        android:text="@string/answer_1"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey_bg"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:id="@+id/icon_2"
            />
        <TextView
            android:layout_toRightOf="@id/icon_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:textColor="@color/company_grey_text"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:textColor="@color/company_grey_text"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        android:text="@string/answer_2"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/grey_bg"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/icon_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22dp"
            android:id="@+id/icon_3"
            />
        <TextView
            android:layout_toRightOf="@id/icon_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:textColor="@color/company_grey_text"
            android:textStyle="bold"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:textColor="@color/company_grey_text"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        android:text="@string/answer_3"
        />
</LinearLayout>
