<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_bg">

    <include
        android:id="@+id/about_head"
        layout="@layout/top_title" />

    <View
        android:layout_width="match_parent"
        android:background="@color/grey_line"
        android:layout_height="1px" />

    <EditText
        android:id="@+id/option_edit"
        android:gravity="start"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="166dp"
        android:background="@color/white"
        android:textColor="@color/company_grey"
        android:textColorHint="@color/company_grey"
        android:textSize="15sp"
        android:hint="@string/option_back" />

    <View
        android:layout_width="match_parent"
        android:background="@color/grey_line"
        android:layout_height="1px" />

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:background="@color/grey_line"
        android:layout_height="1px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="65dp">

        <TextView
            android:id="@+id/contact"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/company_grey_text"
            android:text="@string/cotact_text" />

        <EditText
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:lines="1"
            android:maxLength="30"
            android:id="@+id/contact_text"
            android:hint="@string/contact_example"
            android:textColorHint="@color/company_grey"
            android:layout_toRightOf="@id/contact"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:textColor="@color/company_grey"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/grey_line"
        android:layout_height="1px" />

    <Button
        android:id="@+id/option_send_btn"
        android:layout_marginTop="34dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_submit_unpressed"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:text="@string/send"
        android:padding="10dp"
        />
</LinearLayout>