<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="match_parent"
    android:gravity="center_horizontal"  
    android:orientation="vertical"

  >  
<LinearLayout
    android:background="@color/white"
    android:id="@+id/user_head_pop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"  
    android:orientation="vertical" >
    <EditText
        android:id="@+id/user_changeName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white"
        android:gravity="center"
        android:text=""
        android:hint="@string/change_name"
        android:textColorHint="@color/company_grey"
        android:textColor="@color/company_grey_text"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:src="@color/grey_line"
        android:background="@color/white"/>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:src="@color/grey_line"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <TextView
            android:id="@+id/user_change_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="22dp"
            android:paddingBottom="31dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/company_grey_text"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/user_change_sure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="22dp"
            android:paddingBottom="31dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/company_grey_text"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>
</RelativeLayout>  